--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -26,8 +26,8 @@
 	{\Large \Author\par}
 	\vfill
 	\begin{tabular}{r l}
-		Datum:    & \today \\
-		Betreuer: & \Supervisor\\
+		Date:    & \today \\
+		Supervisor: & \Supervisor\\
 	\end{tabular}
 	\vfill
 \end{titlepage}
