--- a/thesis.tex
+++ b/thesis.tex
@@ -1,43 +1,87 @@
-%%%
-% LaTeX Template for Thesis submitted to AG-Jager
-% This is just a guideline - modify as you like :)
-% Last Update: 2‚4-05-2017
-% Template provided by Kai Gellert
-%%%
-
 \documentclass[a4paper, 12pt, parskip]{scrreprt}
 
-\def\Title{Titel} % title
-\def\Author{Autor} % your name
-\def\Type{Seminararbeit} % {Seminararbeit, Bachelorarbeit, Bachelor Thesis, ...}
-\def\Supervisor{Vorname Nachname} % supervisor's name
+\def\Title{Code-Reuse Attacks for the Web: Breaking Cross-Site Scripting Mitigations via Script Gadgets}
+\def\Author{Burhan Otour}
+\def\Type{Seminar Thesis}
+\def\Supervisor{Peter Chvojka} 
 
-% input encoding as utf8, important for umlauts
 \usepackage[utf8]{inputenc}
-
-% for English change to "english"
-\usepackage[ngerman]{babel}
-
-% Add additional packages as required
+\usepackage[english]{babel}
 \usepackage{graphicx}
+\usepackage{color}
+\usepackage{xcolor}
+\usepackage{listings}
+\usepackage{todonotes}
+\usepackage[
+backend=bibtex,
+style=numeric,
+sorting=ynt
+]{biblatex}
+\addbibresource{bib/references.bib}
+\newcommand\myworries[1]{\textcolor{red}{#1}}
+% BEGIN: Code listing support for JavaScript 
+\definecolor{lightgray}{rgb}{.9,.9,.9}
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+\definecolor{c}{rgb}{1, 1, 1}
+
+\lstdefinelanguage{JavaScript}{
+	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+	keywordstyle=\color{blue}\bfseries,
+	ndkeywords={class, export, boolean, throw, implements, import, this},
+	ndkeywordstyle=\color{purple}\bfseries,
+	identifierstyle=\color{black},
+	sensitive=false,
+	comment=[l]{//},
+	morecomment=[s]{/*}{*/},
+	commentstyle=\color{darkgray}\ttfamily,
+	stringstyle=\color{red}\ttfamily,
+	morestring=[b]',
+	morestring=[b]"
+} 
+
+\lstset{
+	language=JavaScript,
+	backgroundcolor=\color{white},
+	extendedchars=true,
+	basicstyle=\footnotesize\ttfamily,
+	showstringspaces=false,
+	showspaces=false,
+	numbers=left,
+	numberstyle=\footnotesize,
+	numbersep=9pt,
+	tabsize=2,
+	breaklines=true,
+	showtabs=false,
+	captionpos=b,
+	frame=lines
+}
+% END: Code listing support for JavaScript
 
 \begin{document}
+	\include{src/titlepage}
 
-\include{src/titlepage}
+	\pagenumbering{roman}
+	
+	\include{src/abstract}
+	
+	\clearpage
+	
+	\tableofcontents
+	
+	\clearpage
+	
+	\pagenumbering{arabic}
 
-%\pagenumbering{roman}
-%\tableofcontents
-%\newpage
+	\include{src/introduction}
+	
+	\include{src/background}
+	
+	\include{src/script_gadgets}
 
-\chapter{Einführung}
+	\include{src/gadget_JS_libraries}
 
-
-\pagenumbering{arabic}
-% Include your files here!
-
-%\include{content}
-
-
+	\include{src/gadgets_userland_code.tex}
 % bibliography
 % we recommend using cryptobib for your bibliography
 % c.f. https://cryptobib.di.ens.fr
@@ -46,5 +90,7 @@
 %\addcontentsline{toc}{chapter}{Literaturverzeichnis}
 %\bibliographystyle{alpha}
 %\bibliography{abbrev0, crypto}
+
+\printbibliography
 
 \end{document}
